tests/invalid/for_loop_empty_tuple_target/main.py
def run_case() -> None:
    for () in [()]:
        pass

if __name__ == "__main__":
    run_case()
